--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -53,4 +53,6 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Script/UnrealTest.UnrealTestGameMode
 
