Fix Linker error
Everyone should be able to build now

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -54,5 +54,6 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Script/UnrealTest.UnrealTestGameMode
+GlobalDefaultGameMode=/Game/Blueprints/GameState/ThirdPersonGameMode.ThirdPersonGameMode_C
+GameDefaultMap=/Game/Levels/CityScape
 
