--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -18,14 +18,34 @@ bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 FOVScale=0.011110
 DoubleClickTime=0.200000
--AxisMappings=(AxisName="Forward",Key=W,Scale=1.000000)
--AxisMappings=(AxisName="Right",Key=D,Scale=1.000000)
--AxisMappings=(AxisName="Forward",Key=S,Scale=-1.000000)
--AxisMappings=(AxisName="Right",Key=A,Scale=1.000000)
-+AxisMappings=(AxisName="Forward",Key=W,Scale=1.000000)
-+AxisMappings=(AxisName="Right",Key=D,Scale=1.000000)
-+AxisMappings=(AxisName="Forward",Key=S,Scale=-1.000000)
-+AxisMappings=(AxisName="Right",Key=A,Scale=-1.000000)
+-ActionMappings=(ActionName="ResetVR",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="ResetVR",Key=F1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Handbrake",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="SwitchCamera",Key=F1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="ResetVR",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="ResetVR",Key=F1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Handbrake",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SwitchCamera",Key=F1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
+-AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
+-AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
+-AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
+-AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=1.000000)
+-AxisMappings=(AxisName="LookRight",Key=MouseY,Scale=1.000000)
+-AxisMappings=(AxisName="LookUpRate",Key=Gamepad_RightY,Scale=1.000000)
+-AxisMappings=(AxisName="LookRightRate",Key=None,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=1.000000)
++AxisMappings=(AxisName="LookRight",Key=MouseY,Scale=1.000000)
++AxisMappings=(AxisName="LookUpRate",Key=Gamepad_RightY,Scale=1.000000)
++AxisMappings=(AxisName="LookRightRate",Key=Gamepad_RightX,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
