Add most of the backend for HAERT_Pawn
Add the player character

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -54,6 +54,6 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/Blueprints/GameState/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/GameState/Gameplay.Gameplay_C
 GameDefaultMap=/Game/Levels/CityScape
 
