--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -56,4 +56,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/GameState/Gameplay.Gameplay_C
 GameDefaultMap=/Game/Levels/CityScape
+EditorStartupMap=/Game/Avolanty/Avodemo
 
